nginx-server.yaml
apiVersion: v1 
kind: Pod 
metadata: 
  name: nginx 
  labels: 
    app: frontend 
spec: 
  containers:
    - name: nginx 
      image: nginx:latest 
      ports: 
        - containerPort: 80
